--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,9 @@ $RECYCLE.BIN/
 *.msm
 *.msp
 
+# Python
+*.pyc
+
 # =========================
 # Operating System Files
 # =========================
