Egg cleanup, move to more stable testing, more correct line symbols in legend

--- a/.gitignore
+++ b/.gitignore
@@ -29,7 +29,8 @@ $RECYCLE.BIN/
 .LSOverride
 
 # Icon must ends with two \r.
-Icon
+Icon
+
 
 # Thumbnails
 ._*
@@ -37,3 +38,6 @@ Icon
 # Files that might appear on external disk
 .Spotlight-V100
 .Trashes
+
+# Special folders
+tests/outputs
